--- a/Index.html
+++ b/Index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Donut Shop</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="Donust shop1.css">
+    <link rel="stylesheet" href="css/donut-shop.css">
 </head>
 <body>
     <!-- Header Section -->
